--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,5 +10,12 @@
     <li><a href="users">Users</a></li>
     <li><a href="meals">Meals</a></li>
 </ul>
+<h4>Выбирите под каким пользователем войти:</h4>
+<form method="post" action="users?action=user">
+    <button  style="width:70px" type="submit">User</button>
+</form>
+<form method="post" action="users?action=admin">
+    <button style="width:70px"  type="submit">Admin</button>
+</form>
 </body>
 </html>
